--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,126 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
 }
-
+:root
+{
+  --bg-white:#fff;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.home{
+  background-color: #1abc9c;
+  height: 100vh;
+  padding-top: 100px;
+}
+.line{
+  width: 10%;
+  height: 4px;
+  background-color: var(--bg-white);
+  border-radius: 1rem;
+}
+.line2{
+  background-color: black;
+  width: 10%;
+  height: 4px;
+  border-radius: 1rem;
+}
+.avatar{
+  padding-top: 40px;
+  width: 15rem;
+}
+h1{
+  font-size: 4rem;
+}
+#about{
+  background-color: #1abc9c;
+}
+.ml-auto{
+  margin-left: auto;
+}
+.mr-auto{
+  margin-right: auto;
+}
+.page-section{
+  padding: 6rem 0;
+}
+.form-group{
+  border-bottom: 1px solid #e9ecef;
+}
+.form-control{
+  border: none;
+}
+.control-group{
+  padding-bottom: 20px;
+}
+.btn-primary{
+  background-color: #1abc9c ;
+  border-color: #1abc9c;
+}
+.btn-primary:hover{
+  background-color: #158e75 ;
+  border-color: #158e75;
+}
+.footer{
+  background-color: #2c3e50;
+  color: #fff;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+.btn-social{
+  border-radius: 100%;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  width: 3.25rem;
+  height: 3.25rem;
+  display: inline-flex;
+}
+.copyright{
+  background-color: #1a252f;
+}
+
+.bg-light{
+  background-color: #2c3e50 !important;
+
+
+}
+a:hover{
+  color: #1abc9c !important;
+
+}
+a.nav-link.active{
+  color: #fff;
+  background-color: #1abc9c;
+}
+
+.caption {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #158e75;
+}
+.contain:hover .caption {
+  opacity: 0.8;
+  cursor: pointer;
+}
+.close{
+  position: absolute;
+  z-index: 1;
+  right: 1.5rem;
+  top: 1rem;
+  font-size: 3rem;
+  line-height: 3rem;
+  color: #1abc9c;
+  opacity: 1;
 }
